# solana-ui

./: .gitignore  Cargo.toml  Info.plist  README.md  RELEASE.md
.github/workflows/: build-macos.yml  release.yml
assets/icons/: AppIcon.icns
scripts/: README.md  build-macos.sh  clean.sh  dev.sh  generate-icons.sh  release.sh  setup.sh  test.sh
src/: constants.rs  lib.rs  main.rs  solana.rs  ui.rs  updater.rs  utils.rs
src/config/: mod.rs
src/tabs/: find_voters.rs  gossip_nodes.rs  leader_schedule.rs  logs.rs  mod.rs  update.rs  validators.rs
